This commit contains the following changes - Replacing the field level validations in global config by a validateCredentials button. - Validate credentials will verify if assume role works for role arn and will call device farm to verify it has access to device farm apis - Help text in Post Build section to follow troubleshooting wiki.

--- a/src/main/resources/org/jenkinsci/plugins/awsdevicefarm/AWSDeviceFarmRecorder/help-projectName.html
+++ b/src/main/resources/org/jenkinsci/plugins/awsdevicefarm/AWSDeviceFarmRecorder/help-projectName.html
@@ -4,4 +4,5 @@
   demoproject <br />
   My FireOS Project <br />
   My Android Project <br />
+  In case you are not able to see the Projects refer to <a href = "https://github.com/awslabs/aws-device-farm-jenkins-plugin#generating-a-proper-iam-user">troubleshooting guide</a>
 </div>
