--- a/src/main/resources/org/jenkinsci/plugins/awsdevicefarm/AWSDeviceFarmRecorder/help-projectName.html
+++ b/src/main/resources/org/jenkinsci/plugins/awsdevicefarm/AWSDeviceFarmRecorder/help-projectName.html
@@ -4,5 +4,5 @@
   demoproject <br />
   My FireOS Project <br />
   My Android Project <br />
-  In case you are not able to see the Projects refer to <a href = "https://github.com/awslabs/aws-device-farm-jenkins-plugin#project-section-not-being-populated-with-latest-data" target="_blank">troubleshooting guide</a>
+  In case you are not able to see the Projects, refer to <a href = "https://github.com/awslabs/aws-device-farm-jenkins-plugin#project-section-not-being-populated-with-latest-data" target="_blank">troubleshooting guide</a>
 </div>
